fix source_menu json

--- a/plugins/menu-editor/models/Source_menu.settings.json
+++ b/plugins/menu-editor/models/Source_menu.settings.json
@@ -21,7 +21,7 @@
     },
     "parent_uuid": {
       "type": "string",
-      "required": true,
+      "required": false,
       "unique": false,
       "configurable": true
     }
