CODE: call get after save menu etc.

--- a/plugins/menu-editor/models/Source_menu.settings.json
+++ b/plugins/menu-editor/models/Source_menu.settings.json
@@ -24,6 +24,11 @@
       "required": false,
       "unique": false,
       "configurable": true
+    },
+    "page_id": {
+      "via": "id",
+      "plugin": "content-manager",
+      "model": "pages"
     }
   }
 }
