CODE: buttons for create newItem and newRelatedItem

--- a/api/pages/models/pages.settings.json
+++ b/api/pages/models/pages.settings.json
@@ -32,6 +32,11 @@
     "Visibility": {
       "type": "boolean",
       "default": true
+    },
+    "source_menus": {
+      "via": "page_id",
+      "plugin": "menu-editor",
+      "collection": "source_menu"
     }
   }
 }
