CODE: Final code to merge request

--- a/api/pages/models/pages.settings.json
+++ b/api/pages/models/pages.settings.json
@@ -13,7 +13,7 @@
       "type": "string",
       "private": false,
       "required": true,
-      "unique": true
+      "unique": false
     },
     "Concept": {
       "type": "boolean"
@@ -38,6 +38,14 @@
     },
     "child_order": {
       "type": "integer"
+    },
+    "slug": {
+      "type": "string"
+    },
+    "seo": {
+      "type": "component",
+      "repeatable": false,
+      "component": "seo-settings.seo"
     }
   }
 }
